--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">ContactsApp</string>
+    <string name="delete">delete</string>
+    <string name="name">Name:</string>
+    <string name="number">Number:</string>
+    <string name="save">SAVE</string>
 </resources>
